spacing fix phones

--- a/src/index.css
+++ b/src/index.css
@@ -305,7 +305,7 @@ section {
   }
   .page-card-small h1 {
     font-size: 10vw;
-    margin-top: -10vw;
+    margin-top: -5vw;
   }
 }
 
